--- a/index.css
+++ b/index.css
@@ -1,51 +1,35 @@
-#view {
-    background: black;
-    border: solid, black;
-    height: 40px;
-    font-size: 20px;
-    color: limegreen;
-    text-align: right;
-}
-h1{
-  text-align: center;
-}
-.btn {
-    font-family: 'Share Tech Mono';
-}   
-#button {
-    width: 90%;
-    text-align: center 
-}  
-.top {
-    display: inline;
-    position: top;
-    
-}  
-.grn {
-    background: lightgreen;
-    color: brown;
-    display: inline;
-    width: 22%;
-    height: 36px;
-    font-size: 18px;
-}  
-.dgrn {
-    background: darkgreen;
-    color: white;
-    display: inline;
-    width: 22%;
-    height: 36px;
-    font-size: 18px;
-}  
-.lower {
-    display: inline;
-    position: bottom;
-    
-}  
-.operator {
-    background: black;
-    color: red;
-    height: 36px;
-    width: 22%;
-    font-size: 18px;
-}
+.jumbotron { 
+    width: 60%; 
+    margin: auto; 
+    text-align: center; 
+} 
+
+#output { 
+    border: 2px solid black; 
+    min-height: 60px; 
+    text-align: right; 
+    font-weight: bold; 
+    font-size: 20px; 
+} 
+
+.btn { 
+    min-width: 120px; 
+    border: 2px solid black; 
+} .jumbotron { 
+    width: 60%; 
+    margin: auto; 
+    text-align: center; 
+} 
+
+#output { 
+    border: 2px solid black; 
+    min-height: 60px; 
+    text-align: right; 
+    font-weight: bold; 
+    font-size: 20px; 
+} 
+
+.btn { 
+    min-width: 120px; 
+    border: 2px solid black; 
+} 
